# shortener

./: .gitignore  Cargo.toml  README.md  sqlx-data.json
.github/workflows/: rust.yml
migrations/: 20210428085729_initial.sql
src/: data.rs  main.rs  session.rs  state.rs  utils.rs
src/handlers/: create.rs  dashboard.rs  delete.rs  index.rs  login.rs  logout.rs  mod.rs  register.rs  shortcut.rs
static/css/: bulma.css  fontawesome.css
templates/: base.html  create.tera  dashboard.html  index.html  index.tera  login.html  register.html
