[package]
name = "shortener"
version = "0.1.0"
authors = ["Elinvynia <59487684+Elinvynia@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tide = "0.16"
async-std = { version = "1.8", features = ["attributes"] }
tera = { version = "1.6", default-features = false }
serde = "1.0"
nanoid = "0.3"
