[package]
name = "shortener"
version = "0.1.0"
authors = ["Elinvynia <59487684+Elinvynia@users.noreply.github.com>"]
edition = "2018"

[dependencies]
async-std = { version = "1.9", features = ["attributes"] }
tide = "0.16"
tera = { version = "1.8", default-features = false }
sqlx = { version = "0.5", features = ["runtime-async-std-rustls", "mysql", "macros", "migrate", "offline"]}

# Utils
dotenv = "0.15"
async-trait = "0.1"
anyhow = "1.0"
nanoid = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
log = "0.4"
env_logger = "0.8"
